feat(cry-analysis): 울음 분석 기능 기반 구조 + Sprint 8 마무리
- 울음 분석 feature 추가 (models, providers, services, widgets)
- TFLite 모델 및 학습 스크립트 추가
- 마이크 권한 설정 (iOS/Android)
- 수유 기록 UI 개선 (breast_feeding_form, feeding_type_selector)
- 기저귀 기록 화면 개선
- HomeProvider 캐싱 최적화
- QA 코드 리뷰 문서 추가

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Cry Analysis: Microphone permission -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
     <application
         android:label="lulu_mvp_f"
         android:name="${applicationName}"
