--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,10 @@ dependencies:
   # AI
   dart_openai: ^5.1.0
 
+  # Cry Analysis (Phase 2)
+  record: ^6.2.0
+  tflite_flutter: ^0.12.1
+
   # Utilities
   uuid: ^4.5.2
   intl: ^0.20.2
@@ -63,3 +67,4 @@ flutter:
     - assets/data/fenton_girls.json
     - assets/data/who_boys.json
     - assets/data/who_girls.json
+    - assets/models/
