feat(family): Family Sharing 기능 구현
Family Sharing 기능을 통해 가족 구성원들이 아기 기록을 공유할 수 있습니다.

## 주요 기능
- 초대 코드 생성 및 공유 (6자리, 7일 유효)
- 가족 참여 (초대 코드 입력)
- 기존 기록 마이그레이션 (아기 매핑)
- 소유권 이전
- 가족 나가기

## 추가된 파일
### DB 마이그레이션
- supabase/migrations/003_family_sharing.sql

### 모델
- lib/features/family/models/family_member_model.dart
- lib/features/family/models/family_invite_model.dart
- lib/features/family/models/invite_info_model.dart

### 서비스
- lib/features/family/services/invite_service.dart
- lib/core/services/deep_link_service.dart

### Provider
- lib/features/family/providers/family_provider.dart

### UI
- lib/features/family/screens/family_screen.dart
- lib/features/family/screens/join_family_screen.dart
- lib/features/family/screens/transfer_owner_screen.dart
- lib/features/family/screens/baby_mapping_screen.dart
- lib/features/family/widgets/member_list_tile.dart
- lib/features/family/widgets/invite_bottom_sheet.dart

## 수정된 파일
- iOS Info.plist: 딥링크 설정 추가
- pubspec.yaml: app_links, collection 패키지 추가
- lulu_colors.dart: deepIndigo 색상 추가
- home_provider.dart: onFamilyChanged 메서드 추가
- i18n: 50+ 다국어 문자열 추가 (ko, en)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   intl: ^0.20.2
   path_provider: ^2.1.2
   share_plus: ^10.1.4
+  collection: ^1.18.0
+
+  # Deep Linking
+  app_links: ^6.3.3
+
+  # Import
+  file_picker: ^6.1.1
+  csv: ^5.0.2
 
   # UI Components
   shimmer: ^3.0.0
