--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,20 @@
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>울음 소리를 분석하기 위해 마이크 권한이 필요합니다</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.lulu.app</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>lulu</string>
+			</array>
+		</dict>
+	</array>
+	<key>FlutterDeepLinkingEnabled</key>
+	<true/>
 </dict>
 </plist>
