feat(timeline): 기록 히스토리 + 주간 패턴 차트 구현 (v2.2.3)
## 주요 기능
- DateNavigator: 날짜 좌우 탐색 위젯
- MiniTimeBar: 24시간 타임라인 시각화
- DailySummaryBanner: 일일 요약 배너
- ActivityListItem: 활동 리스트 아이템 (swipe 삭제/편집)
- EditActivitySheet: 활동 편집 바텀시트
- WeeklyPatternChart: 7일 x 48슬롯 히트맵
- PatternDataProvider: 패턴 데이터 캐싱

## UX 개선
- Haptic feedback 추가 (selectionClick, mediumImpact, heavyImpact)
- UndoDeleteMixin: 5초 실행취소 기능
- WeeklyPatternChartSkeleton: 로딩 스켈레톤
- 다태아 함께보기 (TogetherView)

## Auth & RLS
- Apple/Email 인증 시스템
- Family Sharing v3.2 RLS 정책
- is_family_member_or_legacy() 함수

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lulu_mvp_f
 description: "LULU App ver2 (MVP-F) - 다태아 중심 AI 육아 플랫폼"
 publish_to: 'none'
-version: 2.0.0+1
+version: 2.2.3+11
 
 environment:
   sdk: ^3.10.7
@@ -22,6 +22,10 @@ dependencies:
   # Backend
   supabase_flutter: ^2.3.0
   flutter_dotenv: ^5.1.0
+
+  # Auth
+  sign_in_with_apple: ^6.1.4
+  crypto: ^3.0.6
 
   # AI
   dart_openai: ^5.1.0
@@ -48,6 +52,7 @@ dependencies:
   shimmer: ^3.0.0
   fl_chart: ^0.68.0
   connectivity_plus: ^5.0.0
+  flutter_slidable: ^3.1.0  # 스와이프 수정/삭제 UI
 
   # Localization
   flutter_localizations:
