--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,6 +47,8 @@
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>울음 소리를 분석하기 위해 마이크 권한이 필요합니다</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>기록 데이터 파일을 가져오기 위해 사진 라이브러리 접근 권한이 필요합니다</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
