fix(hotfix): Sprint 21 HF 7-bug batch - toast, refresh, insight, icon
#1  daily_view: prevent duplicate reload scheduling during delete (toast stuck)
U1  home_screen: capture ScaffoldMessenger before Navigator.push (toast missing)
#14 daily_view: use _initialLoadDone flag to detect 0->1 activity change
#13 weekly_view: replace inline InsightCard with widget (i18n key display fix)
#4  sweet_spot_card: dynamic locale instead of hardcoded 'ko' in DateFormat
#16 add_baby_dialog: remove Gender.unknown chip, default to Gender.male
#17 diaper icon: replace Icons.sanitizer with custom poop SVG (flutter_svg)

Also: CLAUDE.md v7.3 docs update, handoff.md v9.0 rewrite

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   file_picker: ^6.1.1
   csv: ^5.0.2
 
+  # SVG Icons
+  flutter_svg: ^2.0.10+1
+
   # UI Components
   shimmer: ^3.0.0
   fl_chart: ^0.68.0
@@ -84,3 +87,4 @@ flutter:
     - assets/data/who_girls.json
     - assets/models/
     - assets/icon/
+    - assets/icons/
